--- a/v1/.htaccess
+++ b/v1/.htaccess
@@ -9,3 +9,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^users$ userHandler.php [L]
 
 RewriteRule ^sessions$ sessionsHandler.php [L]
+RewriteRule ^sessions/([0-9]+)$ sessionsHandler.php?session_id=$1 [L]
