--- a/v1/.htaccess
+++ b/v1/.htaccess
@@ -10,3 +10,6 @@ RewriteRule ^users$ userHandler.php [L]
 
 RewriteRule ^sessions$ sessionsHandler.php [L]
 RewriteRule ^sessions/([0-9]+)$ sessionsHandler.php?session_id=$1 [L]
+
+RewriteRule ^rooms$ roomsHandler.php [L]
+RewriteRule ^rooms/([0-9]+)$ roomsHandler.php?room_id=$1 [L]
